[상단]오버 테스트4

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -42,6 +42,9 @@ body, #headerwarp {
   margin: 0 -50px;
   background-color: #66ac25;
 }
+#gNavi.gNavi > ul:hover li {
+  padding: 0 1rem;
+}
 #gNavi.gNavi > ul:hover::before,
 #gNavi.gNavi > ul:hover ul {
   height: 300px;
