[상단]메뉴바 테스트

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -40,7 +40,7 @@ body, #headerwarp {
 }
 #gNavi.gNavi > ul:hover {
   margin: 0 -50px;
-  background-color: #66ac25;
+  background-color: #558CCF;
 }
 #gNavi.gNavi > ul:hover li {
   padding: 0 5rem;
