--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -16,7 +16,9 @@ body, #headerwarp{
     }
 }
 
-
+#headersub .web_logo{
+    background-color: #558CCF;
+}
 
 #gNavi{
 
@@ -65,7 +67,7 @@ body, #headerwarp{
                 right: 0;
                 width: 100% !important;
                 position: absolute;
-                left: 0;
+                left: 24px;
                 top: 90px;
 
                 li{
@@ -73,7 +75,7 @@ body, #headerwarp{
                     font-size: 15px !important;
                     background-color: transparent !important;
                     font-family: "Paperlogy 3 Light";
-                    padding:7px 0px !important;
+                    padding:8px 56px !important;
                     text-align: start;
                 }
             }
@@ -83,8 +85,7 @@ body, #headerwarp{
             > a{
                 //대메뉴
               font-family: "Paperlogy 6 SemiBold" !important;
-              &.active-hover {
-                color: #3792D8 !important;
+              
               &.active{
                 &:after {
                     content: '';
