[상단]메뉴바 테스트2

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -16,7 +16,7 @@ body, #headerwarp {
   display: none !important;
 }
 
-#headersub .web_logo {
+.web_logo.active-hover {
   background-color: #558CCF;
 }
 
