--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -53,7 +53,7 @@ body, #headerwarp{
                 &::before,
                 ul{
                     height: 300px;
-                    margin: 0 -50px;
+                    margin: 0 0px;
                     background-color: #66ac25;
                 }
             }
@@ -85,6 +85,7 @@ body, #headerwarp{
             > a{
                 //대메뉴
               font-family: "Paperlogy 6 SemiBold" !important;
+              padding: 0px 15px !important;
               
               &.active{
                 &:after {
