--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -48,7 +48,7 @@ body, #headerwarp{
                 margin: 0 -50px;
                 background-color: #558CCF;
                 li{
-                    padding: 0 5rem;
+                    padding: 0 5rem !important;
                     transition: all 0.5s;
                 }
                 &::before,
@@ -57,6 +57,7 @@ body, #headerwarp{
                     margin: 0 0px;
                     background-color: #66ac25;
                     transition: all 0.5s;
+                    white-space: nowrap;
                 }
             }
             ul{
@@ -99,6 +100,7 @@ body, #headerwarp{
                     height: 4px;
                     background: #00A2FF;
                     width: 106px;
+                    
                    }
               }
             }
