--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -50,6 +50,9 @@ body, #headerwarp {
   padding: 0 5rem !important;
   transition: all 0.5s;
 }
+#gNavi.gNavi > ul:hover lili {
+  padding: 1rem !important;
+}
 #gNavi.gNavi > ul:hover::before,
 #gNavi.gNavi > ul:hover ul {
   height: 300px;
