--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -50,17 +50,17 @@ body, #headerwarp{
                 li{
                     padding: 0 5rem !important;
                     transition: all 0.5s;
-                    &li{
-                        padding: 1rem !important;
-                    }
+                    margin-bottom: 10px;
+               
                 }
                 &::before,
                 ul{
-                    height: 300px;
+                    height: 250px;
                     margin: 0 0px;
                     background-color: #66ac25;
                     transition: all 0.5s;
                     white-space: nowrap;
+                    padding-top: 10px;
                 }
             }
             ul{
@@ -952,8 +952,8 @@ button.slick-prev, button.slick-next {
 
 
 #gNavi.gNavi > #gNaviNum0:hover a{
-    color: white;
+    color: white !important;
 }
 #gNavi.gNavi > #gNaviNum0:hover > li{
-    color: white;
+    color: white !important;
 }
