--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -908,14 +908,6 @@ button.slick-prev, button.slick-next {
   background: url("https://juhyun88.github.io/iweb_src/logoimg/logo129.png") center/cover no-repeat;
 }
 
-#gNavi.gNavi > ul:hover a {
-  color: white !important;
-}
-
-#gNavi.gNavi > ul:hover > li {
-  color: white !important;
-}
-
-#gNavi.gNavi > ul:hover #gNaviNum0 {
+#gNavi.gNavi > ul > li#gNaviNum0:hover > ul {
   background-color: beige;
 }
