--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -44,7 +44,7 @@ body, #headerwarp {
 }
 #gNavi.gNavi > ul:hover {
   margin: 0 -50px;
-  background-color: #558CCF;
+  background-color: #DBEBF6 !important;
 }
 #gNavi.gNavi > ul:hover li {
   padding: 0 5rem !important;
@@ -55,7 +55,7 @@ body, #headerwarp {
 #gNavi.gNavi > ul:hover ul {
   height: 250px;
   margin: 0 0px;
-  background-color: #66ac25;
+  background-color: #DBEBF6 !important;
   transition: all 0.5s;
   white-space: nowrap;
   padding-top: 10px;
@@ -95,7 +95,7 @@ body, #headerwarp {
   transform: translate3d(-50%, 0, 0);
   width: 0;
   height: 4px;
-  background: #00A2FF;
+  background: #DBEBF6 !important;
   width: 106px;
 }
 #gNavi #gNaviNum0 a.sub_mm::before {
@@ -908,6 +908,18 @@ button.slick-prev, button.slick-next {
   background: url("https://juhyun88.github.io/iweb_src/logoimg/logo129.png") center/cover no-repeat;
 }
 
+#gNavi.gNavi > ul > li#gNaviNum0:hover {
+  background-color: #558ccf;
+}
+
+#gNavi.gNavi > ul > li#gNaviNum0:hover a {
+  background-color: white !important;
+}
+
 #gNavi.gNavi > ul > li#gNaviNum0:hover > ul {
-  background-color: beige;
+  background-color: #558ccf;
+}
+
+#gNavi.gNavi > ul > li#gNaviNum0:hover > ul > li {
+  color: white !important;
 }
