--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -17,7 +17,7 @@ body, #headerwarp {
 }
 
 .web_logo.active-hover {
-  background-color: #558CCF;
+  background-color: var(--light-blue, #dbebf6) !important;
 }
 
 #gNavi.gNavi {
@@ -39,12 +39,12 @@ body, #headerwarp {
   left: 0;
   width: 100%;
   height: 0;
-  background-color: #fff;
+  background-color: var(--light-blue, #dbebf6) !important;
   transition: 0.5s;
 }
 #gNavi.gNavi > ul:hover {
   margin: 0 -50px;
-  background-color: #DBEBF6 !important;
+  background-color: var(--light-blue, #dbebf6) !important;
 }
 #gNavi.gNavi > ul:hover li {
   padding: 0 5rem !important;
@@ -55,7 +55,7 @@ body, #headerwarp {
 #gNavi.gNavi > ul:hover ul {
   height: 250px;
   margin: 0 0px;
-  background-color: #DBEBF6 !important;
+  background-color: var(--light-blue, #dbebf6) !important;
   transition: all 0.5s;
   white-space: nowrap;
   padding-top: 10px;
@@ -95,7 +95,7 @@ body, #headerwarp {
   transform: translate3d(-50%, 0, 0);
   width: 0;
   height: 4px;
-  background: #DBEBF6 !important;
+  background: var(--light-blue, #dbebf6) !important;
   width: 106px;
 }
 #gNavi #gNaviNum0 a.sub_mm::before {
@@ -109,7 +109,7 @@ body, #headerwarp {
   vertical-align: middle;
 }
 #gNavi #gNaviNum0 a {
-  color: #F17522 !important;
+  color: #F17522;
   font-family: "Paperlogy-8ExtraBold" !important;
 }
 
