--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -17,7 +17,7 @@ body, #headerwarp{
 }
 
 .web_logo.active-hover{
-    background-color: #558CCF;
+    background-color: var(--light-blue, #dbebf6)!important;
 }
 
 #gNavi{
@@ -41,12 +41,12 @@ body, #headerwarp{
                 left: 0;    
                 width: 100%;
                 height: 0;
-                background-color: #fff;
+                background-color: var(--light-blue, #dbebf6)!important;
                 transition: 0.5s;
             }
             &:hover{
                 margin: 0 -50px;
-                background-color: #DBEBF6 !important;
+                background-color: var(--light-blue, #dbebf6)!important;
                 li{
                     padding: 0 5rem !important;
                     transition: all 0.5s;
@@ -57,7 +57,7 @@ body, #headerwarp{
                 ul{
                     height: 250px;
                     margin: 0 0px;
-                    background-color: #DBEBF6 !important;
+                    background-color: var(--light-blue, #dbebf6)!important;
                     transition: all 0.5s;
                     white-space: nowrap;
                     padding-top: 10px;
@@ -101,7 +101,7 @@ body, #headerwarp{
                     transform: translate3d(-50%, 0, 0);
                     width: 0;
                     height: 4px;
-                    background: #DBEBF6 !important;
+                    background: var(--light-blue, #dbebf6)!important;
                     width: 106px;
                     
                    }
@@ -123,7 +123,7 @@ body, #headerwarp{
       }
       #gNaviNum0{
         a {
-            color: #F17522 !important;
+            color: #F17522;
             font-family: 'Paperlogy-8ExtraBold'!important;
         }
       }
