--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -55,7 +55,6 @@ body, #headerwarp {
 #gNavi.gNavi > ul:hover ul {
   height: 250px;
   margin: 0 0px;
-  background-color: #558ccf !important;
   transition: all 0.5s;
   white-space: nowrap;
   padding-top: 10px;
@@ -910,6 +909,10 @@ button.slick-prev, button.slick-next {
 
 #gNavi.gNavi > ul > li#gNaviNum0:hover {
   background-color: #558ccf;
+}
+
+#gNavi.gNavi > ul > li#gNaviNum0:hover a {
+  color: white !important;
 }
 
 #gNavi.gNavi > ul > li#gNaviNum0:hover > ul {
