--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -57,7 +57,6 @@ body, #headerwarp{
                 ul{
                     height: 250px;
                     margin: 0 0px;
-                    background-color: #558ccf !important;
                     transition: all 0.5s;
                     white-space: nowrap;
                     padding-top: 10px;
@@ -953,6 +952,9 @@ button.slick-prev, button.slick-next {
 
 #gNavi.gNavi > ul > li#gNaviNum0:hover {
     background-color: #558ccf
+}
+#gNavi.gNavi > ul > li#gNaviNum0:hover a {
+    color: white !important;
 }
 #gNavi.gNavi > ul > li#gNaviNum0:hover > ul {
     background-color: #558ccf
