--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -907,18 +907,15 @@ button.slick-prev, button.slick-next {
   background: url("https://juhyun88.github.io/iweb_src/logoimg/logo129.png") center/cover no-repeat;
 }
 
-#gNavi.gNavi > ul > li#gNaviNum0:hover {
-  background-color: #558ccf;
+#gNavi.gNavi > ul > li.gNaviNum0:hover, #gNavi.gNavi > ul > li.gNaviNum1:hover, #gNavi.gNavi > ul > li.gNaviNum2:hover, #gNavi.gNavi > ul > li.gNaviNum3:hover {
+  background-color: #558ccf; /* 호버 시 배경색 */
 }
-
-#gNavi.gNavi > ul > li#gNaviNum0:hover a {
-  color: white !important;
+#gNavi.gNavi > ul > li.gNaviNum0:hover a, #gNavi.gNavi > ul > li.gNaviNum1:hover a, #gNavi.gNavi > ul > li.gNaviNum2:hover a, #gNavi.gNavi > ul > li.gNaviNum3:hover a {
+  color: white !important; /* 호버 시 링크 글자 색 */
 }
-
-#gNavi.gNavi > ul > li#gNaviNum0:hover > ul {
-  background-color: #558ccf;
+#gNavi.gNavi > ul > li.gNaviNum0:hover > ul, #gNavi.gNavi > ul > li.gNaviNum1:hover > ul, #gNavi.gNavi > ul > li.gNaviNum2:hover > ul, #gNavi.gNavi > ul > li.gNaviNum3:hover > ul {
+  background-color: #558ccf; /* 서브메뉴 배경색 */
 }
-
-#gNavi.gNavi > ul > li#gNaviNum0:hover > ul > li {
-  color: white !important;
+#gNavi.gNavi > ul > li.gNaviNum0:hover > ul > li, #gNavi.gNavi > ul > li.gNaviNum1:hover > ul > li, #gNavi.gNavi > ul > li.gNaviNum2:hover > ul > li, #gNavi.gNavi > ul > li.gNaviNum3:hover > ul > li {
+  color: white !important; /* 서브메뉴 글자 색 */
 }
