--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -950,15 +950,23 @@ button.slick-prev, button.slick-next {
 }
 
 
-#gNavi.gNavi > ul > li#gNaviNum0:hover {
-    background-color: #558ccf
-}
-#gNavi.gNavi > ul > li#gNaviNum0:hover a {
-    color: white !important;
-}
-#gNavi.gNavi > ul > li#gNaviNum0:hover > ul {
-    background-color: #558ccf
-}
-#gNavi.gNavi > ul > li#gNaviNum0:hover > ul > li {
-   color: white !important;
+#gNavi.gNavi > ul > li {
+    &.gNaviNum0:hover,
+    &.gNaviNum1:hover,
+    &.gNaviNum2:hover,
+    &.gNaviNum3:hover {
+        background-color: #558ccf; /* 호버 시 배경색 */
+        
+        a {
+            color: white !important; /* 호버 시 링크 글자 색 */
+        }
+
+        > ul {
+            background-color: #558ccf; /* 서브메뉴 배경색 */
+            
+            > li {
+                color: white !important; /* 서브메뉴 글자 색 */
+            }
+        }
+    }
 }
