[상단]메뉴바 색상 최종

--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -72,7 +72,7 @@ body, #headerwarp{
                 right: 0;
                 width: 100% !important;
                 position: absolute;
-                left: 24px;
+                left: 0px;
                 top: 90px;
 
                 li{
@@ -122,7 +122,7 @@ body, #headerwarp{
       }
       #gNaviNum0{
         a {
-            color: #F17522;
+            color: #F17522 !important;
             font-family: 'Paperlogy-8ExtraBold'!important;
         }
       }
