--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -69,7 +69,7 @@ body, #headerwarp {
   right: 0;
   width: 100% !important;
   position: absolute;
-  left: 24px;
+  left: 0px;
   top: 90px;
 }
 #gNavi.gNavi > ul ul li {
@@ -108,7 +108,7 @@ body, #headerwarp {
   vertical-align: middle;
 }
 #gNavi #gNaviNum0 a {
-  color: #F17522;
+  color: #F17522 !important;
   font-family: "Paperlogy-8ExtraBold" !important;
 }
 
