--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -907,67 +907,31 @@ button.slick-prev, button.slick-next {
   background: url("https://juhyun88.github.io/iweb_src/logoimg/logo129.png") center/cover no-repeat;
 }
 
-#gNavi.gNavi > ul > li#gNaviNum0:hover {
+#gNavi.gNavi > ul > li#gNaviNum0:hover,
+li#gNaviNum1:hover,
+li#gNaviNum2:hover,
+li#gNaviNum3:hover {
   background-color: #558ccf;
 }
 
-#gNavi.gNavi > ul > li#gNaviNum0:hover a {
+#gNavi.gNavi > ul > li#gNaviNum0:hover a,
+li#gNaviNum1:hover a,
+li#gNaviNum2:hover a,
+li#gNaviNum3:hover a {
   color: white !important;
 }
 
-#gNavi.gNavi > ul > li#gNaviNum0:hover > ul {
+#gNavi.gNavi > ul > li#gNaviNum0:hover,
+li#gNaviNum1:hover,
+li#gNaviNum2:hover,
+li#gNaviNum3:hover > ul {
   background-color: #558ccf;
 }
 
-#gNavi.gNavi > ul > li#gNaviNum0:hover > ul > li {
-  color: white !important;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum1:hover {
-  background-color: #558ccf;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum1:hover a {
-  color: white !important;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum1:hover > ul {
-  background-color: #558ccf;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum1:hover > ul > li {
-  color: white !important;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum2:hover {
-  background-color: #558ccf;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum2:hover a {
-  color: white !important;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum2:hover > ul {
-  background-color: #558ccf;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum2:hover > ul > li {
-  color: white !important;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum3:hover {
-  background-color: #558ccf;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum3:hover a {
-  color: white !important;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum3:hover > ul {
-  background-color: #558ccf;
-}
-
-#gNavi.gNavi > ul > li#gNaviNum3:hover > ul > li {
+#gNavi.gNavi > ul > li#gNaviNum0:hover,
+li#gNaviNum1:hover,
+li#gNaviNum2:hover,
+li#gNaviNum3:hover > ul > li {
   color: white !important;
 }
 
