--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -950,54 +950,37 @@ button.slick-prev, button.slick-next {
 }
 
 //상단 바 메뉴 색상 변경//
-#gNavi.gNavi > ul > li#gNaviNum0:hover {
-    background-color: #558ccf
+#gNavi.gNavi > ul >
+ li#gNaviNum0:hover,
+ li#gNaviNum1:hover, 
+ li#gNaviNum2:hover,
+  li#gNaviNum3:hover {
+        background-color: #558ccf
 }
-#gNavi.gNavi > ul > li#gNaviNum0:hover a {
+#gNavi.gNavi > ul >
+ li#gNaviNum0:hover a,
+ li#gNaviNum1:hover a,
+ li#gNaviNum2:hover a,
+ li#gNaviNum3:hover a {
     color: white !important;
 }
-#gNavi.gNavi > ul > li#gNaviNum0:hover > ul {
+#gNavi.gNavi > ul >
+ li#gNaviNum0:hover,
+ li#gNaviNum1:hover,
+ li#gNaviNum2:hover,
+ li#gNaviNum3:hover 
+  > ul {
     background-color: #558ccf
 }
-#gNavi.gNavi > ul > li#gNaviNum0:hover > ul > li {
+#gNavi.gNavi > ul > 
+li#gNaviNum0:hover,
+li#gNaviNum1:hover,
+li#gNaviNum2:hover,
+li#gNaviNum3:hover
+ > ul > li {
    color: white !important;
 }
-#gNavi.gNavi > ul > li#gNaviNum1:hover {
-    background-color: #558ccf
-}
-#gNavi.gNavi > ul > li#gNaviNum1:hover a {
-    color: white !important;
-}
-#gNavi.gNavi > ul > li#gNaviNum1:hover > ul {
-    background-color: #558ccf
-}
-#gNavi.gNavi > ul > li#gNaviNum1:hover > ul > li {
-   color: white !important;
-}
-#gNavi.gNavi > ul > li#gNaviNum2:hover {
-    background-color: #558ccf
-}
-#gNavi.gNavi > ul > li#gNaviNum2:hover a {
-    color: white !important;
-}
-#gNavi.gNavi > ul > li#gNaviNum2:hover > ul {
-    background-color: #558ccf
-}
-#gNavi.gNavi > ul > li#gNaviNum2:hover > ul > li {
-   color: white !important;
-}
-#gNavi.gNavi > ul > li#gNaviNum3:hover {
-    background-color: #558ccf
-}
-#gNavi.gNavi > ul > li#gNaviNum3:hover a {
-    color: white !important;
-}
-#gNavi.gNavi > ul > li#gNaviNum3:hover > ul {
-    background-color: #558ccf
-}
-#gNavi.gNavi > ul > li#gNaviNum3:hover > ul > li {
-   color: white !important;
-}
+
 
 //상단 밑줄//
 #gNavi.gNavi > ul >
