--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -907,17 +907,29 @@ button.slick-prev, button.slick-next {
   background: url("https://juhyun88.github.io/iweb_src/logoimg/logo129.png") center/cover no-repeat;
 }
 
-#gNavi.gNavi > ul > li#gNaviNum0:hover,
-li#gNaviNum1:hover,
-li#gNaviNum2:hover,
-li#gNaviNum3:hover {
+#gNavi.gNavi > ul > li#gNaviNum0:hover {
+  background-color: #558ccf;
+}
+#gNavi.gNavi > ul > li#gNaviNum1:hover {
+  background-color: #558ccf;
+}
+#gNavi.gNavi > ul > li#gNaviNum2:hover {
+  background-color: #558ccf;
+}
+#gNavi.gNavi > ul > li#gNaviNum3:hover {
   background-color: #558ccf;
 }
 
-#gNavi.gNavi > ul > li#gNaviNum0:hover a,
-li#gNaviNum1:hover a,
-li#gNaviNum2:hover a,
-li#gNaviNum3:hover a {
+#gNavi.gNavi > ul > li#gNaviNum0:hover a {
+  color: white !important;
+}
+#gNavi.gNavi > ul > li#gNaviNum1:hover a {
+  color: white !important;
+}
+#gNavi.gNavi > ul > li#gNaviNum2:hover a {
+  color: white !important;
+}
+#gNavi.gNavi > ul > li#gNaviNum3:hover a {
   color: white !important;
 }
 
