--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -970,22 +970,21 @@ button.slick-prev, button.slick-next {
       }
     }
   }
-#gNavi.gNavi > ul >
- li#gNaviNum0:hover,
- li#gNaviNum1:hover,
- li#gNaviNum2:hover,
- li#gNaviNum3:hover 
-  > ul {
-    background-color: #558ccf
-}
-#gNavi.gNavi > ul > 
-li#gNaviNum0:hover,
-li#gNaviNum1:hover,
-li#gNaviNum2:hover,
-li#gNaviNum3:hover
- > ul > li {
-   color: white !important;
-}
+  #gNavi.gNavi {
+    > ul {
+      @for $i from 0 through 3 {
+        > li#gNaviNum#{$i}:hover {
+          > ul {
+            background-color: #558ccf;
+  
+            > li {
+              color: white !important;
+            }
+          }
+        }
+      }
+    }
+  }
 
 
 //상단 밑줄//
